n8n-sts/n8n-postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: n8n-postgres
  namespace: n8n-sts
spec:
  serviceName: "n8n-postgres"
  replicas: 1
  selector:
    matchLabels:
      app: postgres-deploy
  template:
    metadata:
      labels:
        app: postgres-deploy
    spec:
      containers:
      - name: postgres
        image: postgres:10
        volumeMounts:
        - name: data
          mountPath: "/data.db"
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
