n8n-sts/n8n-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n-service
  namespace: n8n-sts
  labels:
    app: n8n-deploy
spec:
  type: ClusterIP
  selector:
    app: n8n-deploy
  ports:
  - protocol: TCP
    name: http
    port: 80
    targetPort: 5678
