n8n-sts/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: n8n-sts
  labels: 
    app: postgres-deploy
spec:
  clusterIP: None
  selector:
    app: postgres-deploy
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
